force-app/main/default/objects/Marketing_Activity_Split__c/Marketing_Activity_Split__c.object-meta.xml
<CustomObject>
    <label>Marketing Activity Split</label>
    <nameField>
        <displayFormat>MAS-{00000000}</displayFormat>
        <label>Marketing Activity Split</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Activity Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>