force-app/main/default/objects/Marketing_Activity_Split__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>This is the start of the week</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>