force-app/main/default/objects/Marketing_Activity_Split__c/fields/Expected_Average_Spend__c.field-meta.xml
<CustomField>
    <fullName>Expected_Average_Spend__c</fullName>
    <label>Expected Average Spend</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>