force-app/main/default/objects/Marketing_Activity_Split__c/fields/Expected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales__c</fullName>
    <label>Expected Sales</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>