force-app/main/default/objects/Marketing_Activity_Split__c/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <label>Marketing Activity</label>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Marketing Activity Splits</relationshipLabel>
    <relationshipName>Marketing_Activity_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>