force-app/main/default/objects/Marketing_Activity_Split__c/fields/Tracked_Footfall__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Footfall__c</fullName>
    <label>Tracked Footfall</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>