force-app/main/default/objects/Marketing_Activity_Split__c/fields/Tracked_New_Members__c.field-meta.xml
<CustomField>
    <fullName>Tracked_New_Members__c</fullName>
    <label>Tracked New Members</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>