force-app/main/default/objects/Marketing_Activity_Split__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>TEXT(Year(Date__c )) &amp;

if ( LEN(TEXT(
IF( 
  CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7)
  )
)) = 1, &quot;0&quot;, &quot;&quot;)

&amp; 

TEXT(
IF( 
  CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Date__c - DATE( YEAR( Date__c ), 1, 1) + 1) / 7)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <type>Text</type>
</CustomField>