force-app/main/default/objects/Marketing_Activity_Split__c/validationRules/Market_Split_Amendment.validationRule-meta.xml
<ValidationRule>
    <fullName>Market_Split_Amendment</fullName>
    <active>true</active>
    <description>The Split Type of the Marketing Activity record must be set to Manual before attempting to amend a Marketing Split record.</description>
    <errorConditionFormula>Text(Marketing_Activity__r.Split_Type__c)   = &apos;Weekly&apos; &amp;&amp;   OR(ISCHANGED( Date__c ), ISCHANGED( Expected_Average_Spend__c ), ISCHANGED( Expected_Footfall__c ), ISCHANGED(  Expected_New_Members__c ), ISCHANGED( Expected_Sales__c ), ISCHANGED( Tracked_Average_Spend__c ), ISCHANGED( Tracked_Footfall__c ), ISCHANGED( Tracked_New_Members__c ), ISCHANGED( Tracked_Sales__c ))</errorConditionFormula>
    <errorMessage>The Split Type of the Marketing Activity record must be set to Manual before attempting to amend a Marketing Split record.</errorMessage>
</ValidationRule>